# backend/src/main/java/com/demo/dto/SignatureCheckResponse.java
@@ -1,12 +1,0 @@
-package com.demo.dto;
-
-import lombok.AllArgsConstructor;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-@Data
-@NoArgsConstructor
-@AllArgsConstructor
-public class SignatureCheckResponse {
-    private Double score;
-}
